[package]
name = "genetic-analysis-orders"
version = "2.1.0"
authors = ["agustinustheoo <agustinustheoo@gmail.com>"]
edition = '2021'
description = ''
homepage = ''
license = 'AGPL-3.0'
repository = ''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { default-features = false, version = "1.0.136", features = ["derive"] }
chrono = { default-features = false, version = '0.4' }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

primitives-duration = { path = '../../primitives/duration', default-features = false }
primitives-tracking-id = { path = '../../primitives/tracking-id', default-features = false }
primitives-price-and-currency = { path = '../../primitives/price-and-currency', default-features = false }
primitives-availability-status = { path = '../../primitives/availability-status', default-features = false }

traits-genetic-analyst-services = { path = '../genetic-analyst-services/traits', default-features = false }
traits-genetic-analysis = { path = '../genetic-analysis/traits', default-features = false }
traits-genetic-analysts = { path = '../genetic-analysts/traits', default-features = false }
traits-genetic-data = { path = '../genetic-data/traits', default-features = false }
traits-genetic-analysis-orders = { path = './traits', default-features = false }
traits-user-profile = { path = '../user-profile/traits', default-features = false }

## Substrate Pallet Dependencies
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.28" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# Local Dependencies
genetic-analysts = { path = '../genetic-analysts', default-features = false }
genetic-analyst-services = { path = '../genetic-analyst-services', default-features = false }
genetic-analyst-qualifications = { path = '../genetic-analyst-qualifications', default-features = false }
genetic-analysis = { path = '../genetic-analysis', default-features = false }
genetic-data = { path = '../genetic-data', default-features = false }
user-profile = { path = '../user-profile', default-features = false }
primitives-profile-roles = { path = '../../primitives/profile-roles', default-features = false }
primitives-ethereum-address = { path = '../../primitives/ethereum-address', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ['std']
std = [
    'serde/std',
    'codec/std',
	'scale-info/std',
    'chrono/std',

    'frame-support/std',
    'frame-system/std',

    'sp-std/std',
    'sp-io/std',

    'pallet-timestamp/std',
	'pallet-randomness-collective-flip/std',
	'pallet-balances/std',

	'genetic-analysts/std',
    'genetic-analyst-services/std',
	'genetic-analyst-qualifications/std',
	'genetic-analysis/std',
	'genetic-data/std',
	'user-profile/std',

    'primitives-duration/std',
    'primitives-tracking-id/std',
    'primitives-price-and-currency/std',
    'primitives-availability-status/std',
    'primitives-profile-roles/std',
    'primitives-ethereum-address/std',

    'traits-genetic-analyst-services/std',
    'traits-genetic-analysis/std',
    'traits-genetic-analysts/std',
    'traits-genetic-data/std',
    'traits-genetic-analysis-orders/std',
    'traits-user-profile/std',
]
runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
