[package]
name = "genetic-analysis"
version = "2.0.1"
authors = ["agustinustheoo <agustinustheoo@gmail.com>"]
edition = '2021'
license = 'AGPL-3.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

primitives-tracking-id = { path = '../../primitives/tracking-id', default-features = false }

traits-genetic-analysis = { path = './traits', default-features = false }
traits-genetic-analysis-orders = { path = '../genetic-analysis-orders/traits', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.130" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
	'scale-info/std',

    'frame-support/std',
    'frame-system/std',

    'pallet-timestamp/std',

    'primitives-tracking-id/std',

    'traits-genetic-analysis/std',
    'traits-genetic-analysis-orders/std',
]
runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
