[package]
name = 'genetic-analysts'
version = '0.1.0'
repository = ''
edition = '2018'
authors = ['agustinustheoo <agustinustheoo@gmail.com>']
description = ''
homepage = ''
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false, optional = true }
primitives-area-code = { path = '../../primitives/area-code', default-features = false }
traits-user-profile = { path = '../../traits/user-profile', default-features = false }
traits-genetic-analyst-services = { path = '../genetic-analyst-services/traits', default-features = false }
traits-genetic-analyst-qualifications = { path = '../../traits/genetic-analyst-qualifications', default-features = false }

## Substrate Pallet Dependencies
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }

## Local Dependencies
genetic-analyst-services = { path = '../genetic-analyst-services', default-features = false }
genetic-analyst-qualifications = { path = '../genetic-analyst-qualifications', default-features = false }
user-profile = { path = '../user-profile', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.119" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'primitives-area-code/std',
    'traits-user-profile/std',
    'traits-genetic-analyst-services/std',
    'traits-genetic-analyst-qualifications/std',

	'pallet-balances/std',
    'pallet-timestamp/std',
    
    'genetic-analyst-services/std',
	'genetic-analyst-qualifications/std',
	'user-profile/std',
]
runtime-benchmarks = [
	'frame-benchmarking'
]
try-runtime = ['frame-support/try-runtime']
