[package]
name = 'genetic-analysts'
version = '2.1.0'
repository = ''
edition = '2021'
authors = ['agustinustheoo <agustinustheoo@gmail.com>']
description = ''
homepage = ''
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28', optional = true }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

primitives-stake-status = { path = '../../primitives/stake-status', default-features = false }
primitives-verification-status = { path = '../../primitives/verification-status', default-features = false }
primitives-availability-status = { path = '../../primitives/availability-status', default-features = false }

traits-user-profile = { path = '../user-profile/traits', default-features = false }
traits-genetic-analysts = { path = './traits', default-features = false }
traits-genetic-analysis-orders = { path = '../genetic-analysis-orders/traits', default-features = false }
traits-genetic-analyst-services = { path = '../genetic-analyst-services/traits', default-features = false }
traits-genetic-analyst-qualifications = { path = '../genetic-analyst-qualifications/traits', default-features = false }

## Substrate Pallet Dependencies
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

## Local Dependencies
genetic-analyst-services = { path = '../genetic-analyst-services', default-features = false }
genetic-analyst-qualifications = { path = '../genetic-analyst-qualifications', default-features = false }
user-profile = { path = '../user-profile', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = '1.0.136' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.28' }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',

    'primitives-verification-status/std',
    'primitives-availability-status/std',

    'traits-user-profile/std',
    'traits-genetic-analysts/std',
    'traits-genetic-analysis-orders/std',
    'traits-genetic-analyst-services/std',
    'traits-genetic-analyst-qualifications/std',

	'pallet-balances/std',
    'pallet-timestamp/std',

    'genetic-analyst-services/std',
	'genetic-analyst-qualifications/std',
	'user-profile/std',
]
runtime-benchmarks = [
	'frame-benchmarking'
]
try-runtime = ['frame-support/try-runtime']
