[package]
name = "hospital-certifications"
version = "0.1.0"
authors = ["agustinustheoo <agustinustheoo@gmail.com>"]
edition = "2018"
description = ''
homepage = ''
license = 'Unlicense'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

hospitals = { path = '../hospitals', default-features = false }

traits-hospital-certifications = { path = '../../traits/hospital-certifications', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.119" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'traits-hospital-certifications/std',
    'hospitals/std',
]
runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
