[package]
name = 'hospitals'
version = '0.1.0'
repository = ''
edition = '2018'
authors = ['agustinustheoo <agustinustheoo@gmail.com>']
description = ''
homepage = ''
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
traits-user-profile = { path = '../../traits/user-profile', default-features = false }
traits-hospital-certifications = { path = '../../traits/hospital-certifications', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'traits-user-profile/std',
    'traits-hospital-certifications/std',
]
