[package]
name = 'hospitals'
version = "2.1.0"
repository = ''
edition = '2021'
authors = ['agustinustheoo <agustinustheoo@gmail.com>']
description = ''
homepage = ''
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", optional = true }
primitives-area-code = { path = '../../primitives/area-code', default-features = false }
traits-user-profile = { path = '../user-profile/traits', default-features = false }
traits-hospital-certifications = { path = '../hospital-certifications/traits', default-features = false }
primitives-profile-roles = { path = '../../primitives/profile-roles', default-features = false }
primitives-ethereum-address = { path = '../../primitives/ethereum-address', default-features = false }

## Substrate Pallet Dependencies
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# Local Dependencies
hospital-certifications = { path = '../hospital-certifications', default-features = false }
user-profile = { path = '../user-profile', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.136" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'primitives-area-code/std',
    'traits-user-profile/std',
    'traits-hospital-certifications/std',

	'pallet-balances/std',

	'hospital-certifications/std',
	'user-profile/std',

    'primitives-profile-roles/std',
    'primitives-ethereum-address/std',
]
runtime-benchmarks = [
	'frame-benchmarking'
]
try-runtime = ['frame-support/try-runtime']
