[package]
name = 'labs'
version = "2.1.0"
repository = ''
edition = '2021'
authors = ['kevin <kevin.janada@gmail.com>']
description = ''
homepage = ''
license = 'AGPL-3.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
log = { version = "0.4", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false, optional = true }

primitives-stake-status = { path = '../../primitives/stake-status', default-features = false }
primitives-verification-status = { path = '../../primitives/verification-status', default-features = false }
primitives-area-code = { path = '../../primitives/area-code', default-features = false }

traits-labs = { path = './traits', default-features = false }
traits-order = { path = '../orders/traits', default-features = false }
traits-services = { path = '../services/traits', default-features = false }
traits-certifications = { path = '../certifications/traits', default-features = false }
traits-user-profile = { path = '../user-profile/traits', default-features = false }

## Substrate Pallet Dependencies
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

# Local Dependencies
services = { path = '../services', default-features = false }
certifications = { path = '../certifications', default-features = false }
user-profile = { path = '../user-profile', default-features = false }

[dev-dependencies]
serde = { default-features = false, version = "1.0.130" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
	'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'primitives-area-code/std',

    'traits-labs/std',
    'traits-services/std',
    'traits-certifications/std',
    'traits-user-profile/std',

	'services/std',
	'certifications/std',
	'user-profile/std',

	'pallet-balances/std',
]
runtime-benchmarks = [
	'frame-benchmarking'
]
try-runtime = ['frame-support/try-runtime']
